--- a/index.html
+++ b/index.html
@@ -4,17 +4,166 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
   <title>Document</title>
 </head>
 
 <body>
-  <!-- Wrokの部分のテキストはこちらを使ってください -->
-  <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-  dolore magna
-  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis
-  aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-  sint -->
+  <header class="header">
+    <div class="inner header-inner">
+      <i class="fas fa-archway fa-3x" style="color:#777;"></i>
+      <nav>
+        <div class="btn btn--blue">Contact</div>
+        <a href="#"></a>
+      </nav>
+    </div>
+  </header>
+  <!-- メインタイトル、サブタイトル、背景画
+    像がある部分 -->
+  <main>
+    <section class="keyvisual">
+      <img src="./img/keyvisual/keyvisual.jpg">
+      <h1 class="title">WEB PRODUCTION COMPANY</h1>
+      <h2 class="subtitle">DIRECTION,CONTENT MARKETING</h2>
+    </section>
+    <!-- 「WORK」のタイトルがある部分 -->
+    <section class="work">
+      <div class="work_contents">
+        <div class="img">
+          <img src="./img/pc/pc.png">
+        </div>
+        <div class="text_home">
+          <p class="ttl">WORK</p>
+          <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu<br>nt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation<br>ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in repreh<br>enderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+            sint</p>
+        </div>
+      </div>
+    </section>
+    <!-- 「WE ARE SKILLS」のタイトルがある部分
+    -->
+    <section class="skills">
+      <div class="head_home">
+        <h3 class="ttl">WE ARE SKILLS</h3>
+      </div>
+      <div class="inner skills-inner">
+        <div class="skills_contents">
+          <div class="skills_img">
+            <img src="./img/skills/skills_1.png">
+            <a href="#"></a>
+          </div>
+          <div class="skills_img">
+            <img src="./img/skills/skills_2.png">
+            <a href="#"></a>
+          </div>
+          <div class="skills_img">
+            <img src="./img/skills/skills_3.png">
+            <a href="#"></a>
+          </div>
+          <div class="skills_img">
+            <img src="./img/skills/skills_4.png">
+            <a href="#"></a>
+          </div>
+          <div class="skills_img">
+            <img src="./img/skills/skills_5.png">
+            <a href="#"></a>
+          </div>
+          <div class="skills_img">
+            <img src="./img/skills/skills_6.png">
+            <a href="#"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 「SELECT PLAN」のタイトルがある部分 -->
+    <section class="plan">
+      <div class="plan_contents">
+        <h4 class="ttl">SELECT PLAN</h4>
+      </div>
+      <div class="inner plan-inner ">
+        <div class="table--area">
+          <table class="cell--table">
+            <thead>
+              <tr>
+                <th>PLAN</th>
+                <th>BASIC PLAN</th>
+                <th>STANDARD PLAN</th>
+                <th>ENTERPRISE PLAN</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>PRICE</th>
+                <td>￥100,000</td>
+                <td>￥200,000</td>
+                <td>￥300,000</td>
+              </tr>
+              <tr>
+                <th>DELIVERY</th>
+                <td>Manuscript</td>
+                <td>HTML</td>
+                <td>Manuscript,HTML,PSD</td>
+              </tr>
+              <tr>
+                <th>ANALYSIS</th>
+                <td>〇</td>
+                <td>〇</td>
+                <td>〇</td>
+              </tr>
+              <tr>
+                <th>IMPROVEMENT</th>
+                <td>×</td>
+                <td>〇</td>
+                <td>〇</td>
+              </tr>
+              <tr>
+                <th>DESIGN</th>
+                <td>×</td>
+                <td>×</td>
+                <td>〇</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+    <!-- iconが並んでいる部分 -->
+    <nav class="sns">
+      <ul class="sns_list">
+        <li class="facebook">
+          <i class="fab fa-facebook-f" style="color: #8c8c8c; overflow: hidden; font-size: 40px; width: 185px;">
+          <a href="#"></a>
+          </i>
+        </li>
+        <li class="dribbble">
+          <i class="fab fa-dribbble" style="color:#8c8c8c; overflow: hidden; font-size: 40px; width: 185px;">
+          <a href="#"></a>
+          </i>
+        </li>
+        <li class="twitter">
+          <i class="fab fa-twitter" style="color:#8c8c8c; overflow: hidden; font-size: 40px; width: 185px;">
+          <a href="#"></a>
+          </i>
+        </li>
+        <li class="envelope">
+          <i class="fa fa-envelope" style="color:#8c8c8c; overflow: hidden; font-size: 40px; width: 185px;">
+          <a href="#"></a>
+          </i>
+        </li>
+      </ul>
+    </nav>
+  </main>
+  <footer>
+    <div class="footer">
+      <div class="inner footer-inner">
+        <p class="copyright">Copyright(c)</p>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
