--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
     像がある部分 -->
   <main>
     <section class="keyvisual">
-      <img src="./img/keyvisual/keyvisual.jpg">
-      <h1 class="title">WEB PRODUCTION COMPANY</h1>
-      <h2 class="subtitle">DIRECTION,CONTENT MARKETING</h2>
+      <div class="title">WEB PRODUCTION COMPANY</div>
+      <div class="subtitle">DIRECTION,CONTENT MARKETING</div>
     </section>
     <!-- 「WORK」のタイトルがある部分 -->
     <section class="work">
