--- a/index.html
+++ b/index.html
@@ -50,32 +50,28 @@
         <h3 class="ttl">WE ARE SKILLS</h3>
       </div>
       <div class="inner skills-inner">
-        <div class="skills_contents">
-          <div class="skills_img">
-            <img src="./img/skills/skills_1.png">
-            <a href="#"></a>
-          </div>
-          <div class="skills_img">
-            <img src="./img/skills/skills_2.png">
-            <a href="#"></a>
-          </div>
-          <div class="skills_img">
-            <img src="./img/skills/skills_3.png">
-            <a href="#"></a>
-          </div>
-          <div class="skills_img">
-            <img src="./img/skills/skills_4.png">
-            <a href="#"></a>
-          </div>
-          <div class="skills_img">
-            <img src="./img/skills/skills_5.png">
-            <a href="#"></a>
-          </div>
-          <div class="skills_img">
-            <img src="./img/skills/skills_6.png">
-            <a href="#"></a>
-          </div>
-        </div>
+        <ul class="skills_contents">
+          <li class="skills_img">
+            <a href="#"><img src="./img/skills/skills_1.png"></a>
+          </li>
+          <li class="skills_img">
+            <a href="#"><img src="./img/skills/skills_2.png"></a>
+          </li>
+          <li class="skills_img">
+            <a href="#"><img src="./img/skills/skills_3.png"></a>
+          </li>
+        </ul>
+        <ul class="skills_contents">
+          <li class="skills_img">
+            <a href="#"><img src="./img/skills/skills_4.png"></a>
+          </li>
+          <li class="skills_img">
+            <a href="#"><img src="./img/skills/skills_5.png"></a>
+          </li>
+          <li class="skills_img">
+            <a href="#"><img src="./img/skills/skills_6.png"></a>
+          </li>
+        </ul>
       </div>
     </section>
     <!-- 「SELECT PLAN」のタイトルがある部分 -->
