--- a/index.html
+++ b/index.html
@@ -30,16 +30,22 @@
     </section>
     <!-- 「WORK」のタイトルがある部分 -->
     <section class="work">
-      <div class="work_contents">
-        <div class="img">
-          <img src="./img/pc/pc.png">
-        </div>
-        <div class="text_home">
-          <p class="ttl">WORK</p>
-          <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu<br>nt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation<br>ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in repreh<br>enderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-            sint</p>
+      <div class="inner work-inner">
+        <div class="work_contents">
+          <div class="img-inner">
+            <div class="img">
+              <img src="./img/pc/pc.png">
+            </div>
+          </div>
+          <div class="text_home-inner">
+            <div class="text_home">
+            <p class="ttl">WORK</p>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu<br>nt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation<br>ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in repreh<br>enderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                sint</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -60,8 +66,6 @@
           <li class="skills_img">
             <a href="#"><img src="./img/skills/skills_3.png"></a>
           </li>
-        </ul>
-        <ul class="skills_contents">
           <li class="skills_img">
             <a href="#"><img src="./img/skills/skills_4.png"></a>
           </li>
@@ -129,25 +133,17 @@
     <!-- iconが並んでいる部分 -->
     <nav class="sns">
       <ul class="sns_list">
-        <li class="facebook">
-          <i class="fab fa-facebook-f" style="color: #8c8c8c; overflow: hidden; font-size: 40px; width: 185px;">
-          <a href="#"></a>
-          </i>
+        <li class="sns_icon" >
+          <a href="#" class="fab fa-facebook-f"></a>
         </li>
-        <li class="dribbble">
-          <i class="fab fa-dribbble" style="color:#8c8c8c; overflow: hidden; font-size: 40px; width: 185px;">
-          <a href="#"></a>
-          </i>
+        <li class="sns_icon">
+          <a href="#" class="fab fa-dribbble"></a> 
         </li>
-        <li class="twitter">
-          <i class="fab fa-twitter" style="color:#8c8c8c; overflow: hidden; font-size: 40px; width: 185px;">
-          <a href="#"></a>
-          </i>
+        <li class="sns_icon">
+          <a href="#" class="fab fa-twitter"></a> 
         </li>
-        <li class="envelope">
-          <i class="fa fa-envelope" style="color:#8c8c8c; overflow: hidden; font-size: 40px; width: 185px;">
-          <a href="#"></a>
-          </i>
+        <li class="sns_icon">
+          <a href="#" class="fa fa-envelope"></a>
         </li>
       </ul>
     </nav>
