--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="text_home-inner">
             <div class="text_home">
-            <p class="ttl">WORK</p>
+            <p class="text_work">WORK</p>
               <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu<br>nt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation<br>ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in repreh<br>enderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
@@ -52,27 +52,25 @@
     <!-- 「WE ARE SKILLS」のタイトルがある部分
     -->
     <section class="skills">
-      <div class="head_home">
-        <h3 class="ttl">WE ARE SKILLS</h3>
-      </div>
       <div class="inner skills-inner">
+        <h3 class="text_skills">WE ARE SKILLS</h3>
         <ul class="skills_contents">
-          <li class="skills_img">
+          <li>
             <a href="#"><img src="./img/skills/skills_1.png"></a>
           </li>
-          <li class="skills_img">
+          <li>
             <a href="#"><img src="./img/skills/skills_2.png"></a>
           </li>
-          <li class="skills_img">
+          <li>
             <a href="#"><img src="./img/skills/skills_3.png"></a>
           </li>
-          <li class="skills_img">
+          <li>
             <a href="#"><img src="./img/skills/skills_4.png"></a>
           </li>
-          <li class="skills_img">
+          <li>
             <a href="#"><img src="./img/skills/skills_5.png"></a>
           </li>
-          <li class="skills_img">
+          <li>
             <a href="#"><img src="./img/skills/skills_6.png"></a>
           </li>
         </ul>
@@ -80,10 +78,8 @@
     </section>
     <!-- 「SELECT PLAN」のタイトルがある部分 -->
     <section class="plan">
-      <div class="plan_contents">
-        <h4 class="ttl">SELECT PLAN</h4>
-      </div>
       <div class="inner plan-inner ">
+        <h4 class="text_plan">SELECT PLAN</h4>
         <div class="table--area">
           <table class="cell--table">
             <thead>
